# aris

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: chunk_video.py  convert_aris_to_video.py  encode_video_with_codec.py  extract_average_video_frame.py  extract_standard_deviation_video_frame.py  normalize_video.py  preprocess_sonar_video.py  stabilize_and_preprocess_sonar_video.py  stabilize_sonar_video.py  subtract_video_background.py
src/aris/: BackgroundSubtract_main.py  __init__.py  aris_to_video.py  echogram.py  extract.py  frame.py  preprocessing.py
src/aris/bg_sub/: BBoxManager.py  BBoxManager_test.py  BgFrame.py  BgObjLabel.py  BgSubtract.py  BgUtility.py  CocoAPI.py  FishCountPerformance.py  FrameExtract.py  JSONFormatter.py  ObjectTracker.py  ObjectTracker_test.py
src/aris/pyARIS/: beamLookUp.py  frame.py  pyARIS.py
src/aris/scripts/: __init__.py  chunk_video.py  convert_aris_to_video.py  encode_video_with_codec.py  extract_average_video_frame.py  preprocess_sonar_video.py  stabilize_and_preprocess_sonar_video.py  stabilize_sonar_video.py
src/aris/video/: __init__.py  utils.py
tests/: README.md  conftest.py
tests/fixtures/aris/: 2025-05-13_092300.aris
tests/integration/: test_aris_conversion.py  test_extract_average_frame.py
tests/unit/: test_frame.py  test_preprocessing.py  test_video_utils.py
