[project]
name = "aris"
version = "0.1.0"
description = "Process ARIS files with Python"
readme = "README.md"
authors = [
    { name = "ETM", email = "earthtoolsmaker@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-contrib-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pytz>=2025.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/aris",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--ignore=src/aris/pyARIS/",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
