[project]
name = "aris"
version = "0.1.0"
description = "Process ARIS files with Python"
readme = "README.md"
authors = [
    { name = "ETM", email = "earthtoolsmaker@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-contrib-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pytz>=2025.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ipython>=9.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/aris",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--ignore=src/aris/pyARIS/",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
