[project]
name = "aris"
version = "0.1.2"
description = "Process ARIS files with Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ETM", email = "earthtoolsmaker@gmail.com" }
]
requires-python = ">=3.13"
keywords = [
    "aris",
    "sonar",
    "underwater",
    "imaging",
    "video-processing",
    "oceanography",
    "marine-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-contrib-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pytz>=2025.2",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/earthtoolsmaker/aris"
Repository = "https://github.com/earthtoolsmaker/aris"
Issues = "https://github.com/earthtoolsmaker/aris/issues"

[project.scripts]
aris-convert = "aris.scripts.convert_aris_to_video:main"
aris-chunk = "aris.scripts.chunk_video:main"
aris-extract-frame = "aris.scripts.extract_average_video_frame:main"
aris-encode = "aris.scripts.encode_video_with_codec:main"
aris-stabilize = "aris.scripts.stabilize_sonar_video:main"
aris-preprocess = "aris.scripts.preprocess_sonar_video:main"
aris-stabilize-preprocess = "aris.scripts.stabilize_and_preprocess_sonar_video:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aris"]
exclude = [
    "tests/",
    "tests/**/*",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "tests/**/*",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ipython>=9.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/aris",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--ignore=src/aris/pyARIS/",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "src/aris/pyARIS/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
